# hardware_simulator

./: .gitattributes  .gitignore  .metadata  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/cloudplayplus/hardware_simulator/: HardwareSimulatorPlugin.kt
android/src/test/kotlin/com/cloudplayplus/hardware_simulator/: HardwareSimulatorPluginTest.kt
example/: .gitignore  .metadata  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/cloudplayplus/hardware_simulator_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.m
example/lib/: display_manager_page.dart  fps_game_example.dart  immersive_mode_example.dart  main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: hardware_simulator.podspec
ios/Classes/: HardwareSimulatorPlugin.h  HardwareSimulatorPlugin.m  HardwareSimulatorPlugin.swift
lib/: display_data.dart  hardware_simulator.dart  hardware_simulator_method_channel.dart  hardware_simulator_platform_interface.dart  hardware_simulator_web.dart
linux/: CMakeLists.txt  hardware_simulator_plugin.cc  hardware_simulator_plugin_private.h
linux/include/hardware_simulator/: hardware_simulator_plugin.h
linux/test/: hardware_simulator_plugin_test.cc
macos/: hardware_simulator.podspec
macos/Classes/: HardwareSimulatorPlugin.swift
test/: hardware_simulator_method_channel_test.dart  hardware_simulator_test.dart
windows/: CMakeLists.txt  SmartKeyboardBlocker.cpp  SmartKeyboardBlocker.h  cursor_monitor.cc  cursor_monitor.h  cursor_monitor_sample.cc  gamecontroller_manager.cc  gamecontroller_manager.h  hardware_simulator_plugin.cpp  hardware_simulator_plugin.h  hardware_simulator_plugin_c_api.cpp  notification_window.cc  notification_window.h  virtual_display.cc  virtual_display.h  virtual_display_control.cc  virtual_display_control.h
windows/include/hardware_simulator/: hardware_simulator_plugin_c_api.h
windows/test/: hardware_simulator_plugin_test.cpp
